[gd_scene load_steps=5 format=3 uid="uid://bhiq1p5jxi74f"]

[ext_resource type="Script" path="res://player/player.gd" id="1_ps4rw"]
[ext_resource type="Texture2D" uid="uid://cowv57hf8gut5" path="res://items/chess.png" id="2_2dtx8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8hrts"]
radius = 0.383473
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_unfk1"]
albedo_texture = ExtResource("2_2dtx8")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_ps4rw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.924483, 0)
shape = SubResource("CapsuleShape3D_8hrts")

[node name="BodyShapes" type="Node3D" parent="."]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="HeadShape" type="CSGSphere3D" parent="BodyShapes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.69513, 0.147975)
radius = 0.171105

[node name="BodyShape" type="CSGCylinder3D" parent="BodyShapes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.869793, 0.170399)
radius = 0.176695
height = 1.3026

[node name="HandL" type="CSGSphere3D" parent="BodyShapes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.164004, 1.15256, 0.0456818)
radius = 0.110434

[node name="HandR" type="CSGSphere3D" parent="BodyShapes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.164, 1.153, 0.046)
radius = 0.110434

[node name="StaticBall" type="CSGSphere3D" parent="BodyShapes"]
transform = Transform3D(0.895183, 0.210361, 0.392931, -0.445698, 0.42251, 0.789201, 0, -0.881608, 0.471982, -0.153463, 1.15087, -0.151849)
radius = 0.10408
material = SubResource("StandardMaterial3D_unfk1")

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, -0.125)

[node name="Throwdirection" type="Node3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.246082)

[node name="Camera" type="Camera3D" parent="Head"]
unique_name_in_owner = true

[node name="RayCast" type="RayCast3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -2, 0)

[node name="BoxHolder" type="Node3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.343077, -0.734618, -0.526553)

[node name="ThrowPoint" type="Node3D" parent="Head"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.262739, -0.204745, -0.442391)
